--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev:server": "nodemon app.js -w app.js -w server"
   },
   "dependencies": {
+    "@antv/g2": "^3.2.7",
     "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.2",
     "jsonwebtoken": "^8.3.0",
     "koa": "^2.5.2",
     "koa-bodyparser": "^4.2.1",
