--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa2-cors": "^2.0.6",
     "koa2-history-api-fallback": "0.0.5",
     "melongrid.css": "^1.0.1",
+    "socket.io": "^2.1.1",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
   },
